--- a/src/components/SignInUpMain/SignInUpMain.css
+++ b/src/components/SignInUpMain/SignInUpMain.css
@@ -3,7 +3,12 @@
   height: 22rem;
   position: relative;
   top: 0;
-  background-color: rgb(6, 145, 223);
+  background: rgb(6, 148, 228);
+  background: linear-gradient(
+    122deg,
+    rgb(6, 148, 228) 0%,
+    rgb(3, 109, 175) 80%
+  );
   z-index: -100;
 }
 
